fix: color picker wrap alignment with setting group control

--- a/inc/customizer/custom-controls/assets/css/unminified/color-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/color-rtl.css
@@ -327,6 +327,8 @@
 .ast-color-palette .components-circular-option-picker__option-wrapper {
     margin-left: 6px;
     position: relative;
+	height: 25px;
+    width: 25px;
 }
 /* Clear Button CSS */
 .ast-color-btn-clear-wrap {
