--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -1129,6 +1129,8 @@
 .ast-color-palette .components-circular-option-picker__option-wrapper {
     margin-left: 6px;
     position: relative;
+	height: 25px;
+    width: 25px;
 }
 /* Clear Button CSS */
 .ast-color-btn-clear-wrap {
@@ -4829,7 +4831,7 @@ span.customize-control-title.ast-group-section-title {
   padding-left: 15px;
   box-sizing: border-box;
 }
-.ast-control-wrap .ast-color-picker-alpha.color-picker-hex {
+.ast-control-wrap .ast-color-picker-alpha {
     margin-right: -5px;
     margin-left: -5px;
 }
